examples/test/testpolicy18630.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: policy18630
  namespace: namespace283
spec:
  podSelector:
    matchLabels:
      key12: value17
  policyTypes:
  ingress:
  - from:
    - namespaceSelector:
        matchLabels:
          key25: value25
      podSelector:
        matchLabels:
          key46: value11
          key28: value19
          key44: value42
